# poker-in-rust

./: .gitignore  Cargo.toml  build.rs
src/: card.rs  deck.rs  games.rs  hand.rs  lib.rs  player.rs  poker.rs  pot.rs  rank.rs  suit.rs  texas_hold_em.rs
src/games/: texas_hold_em.rs
src/games/texas_hold_em/: console_player.rs  evaluation.rs  game.rs  game_tests.rs  player_driver.rs  state.rs
src/games/texas_hold_em/evaluation/: database.rs  evaluator.rs  hand_rank.rs  two_plus_two_evaluator.rs
src/games/texas_hold_em/state/: game_loop.rs
src/games/texas_hold_em/state/stages/: finished.rs  flop.rs  pre_flop.rs  pre_round.rs  river.rs  showdown.rs  turn.rs
src/poker/: card.rs  deck.rs  hand.rs  player.rs  pot.rs  suit.rs
src/texas_hold_em/: evaluation.rs  player_driver.rs  state.rs
src/texas_hold_em/evaluation/: database.rs  evaluator.rs  hand_rank.rs  two_plus_two_evaluator.rs
src/texas_hold_em/state/: advancement.rs  game_loop.rs  stages.rs
src/texas_hold_em/state/stages/: finished.rs  flop.rs  pre_flop.rs  pre_round.rs  river.rs  showdown.rs  turn.rs
two-plus-two-hand-evaluator/: README.md  generate-table
